Update description for `node` parameter in action config.

--- a/actions/attach_poller_to_node.yaml
+++ b/actions/attach_poller_to_node.yaml
@@ -9,7 +9,7 @@ runner_type: "python-script"
 parameters:
   node:
     type: "string"
-    description: "The node to poll in Orion."
+    description: "The name of the node to poll in Orion."
     required: true
   poller:
     type: "string"
